# FawltyDeps-analysis

./: .gitignore  README.md  pyproject.toml
fd_analysis/: explore.py  prepare.py
notebooks/: analysis.ipynb  analysis_0.13.1.1.ipynb  analysis_biomed_pypi.ipynb  dependency_declaration_analysis.ipynb  exploration.ipynb  questions4blogpost.ipynb  results-biomedical.ipynb  types_of_projects.ipynb
sample_data/: pypi_packages_top_10.md
