[tool.poetry]
name = "fd-analysis"
version = "0.1.0"
description = ""
authors = ["Maria Knorps <maria.knorps@tweag.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.1.4"
seaborn = "^0.13.1"
matplotlib-venn = "^0.11.10"
venny4py = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
